namespaces/live.cloud-platform.service.justice.gov.uk/hale-platform-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hale-platform-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "wordpress-gang"
    cloud-platform.justice.gov.uk/application: "hale-platform"
    cloud-platform.justice.gov.uk/owner: "Justice On The Web Online Content: wordpress@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hale-platform.git"
    cloud-platform.justice.gov.uk/team-name: "jotw-content-devs"
    cloud-platform.justice.gov.uk/review-after: ""
